--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^5.14.7",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.7"
   },
